--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -12,158 +12,113 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
 
-        <ScrollView
-            android:id="@+id/enrollment_form"
+        <ImageView
+            android:id="@+id/login_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="32dp"
+            android:layout_marginTop="30dp"
+            android:src="@mipmap/home_logo" />
+
+        <RelativeLayout
+            android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="none">
+            android:layout_marginBottom="40dp"
+            android:focusableInTouchMode="true"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/email_login_form"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/firstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusableInTouchMode="true"
-                android:orientation="vertical">
+                android:layout_above="@+id/lastName"
+                android:layout_marginBottom="24dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginRight="42dp"
+                android:hint="@string/prompt_last_name"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
-                <TextView
-                    style="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:text="New User"
-                    android:textAlignment="center" />
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/lastName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/email"
+                android:layout_marginBottom="24dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginRight="42dp"
+                android:hint="@string/prompt_last_name"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/password"
+                android:layout_marginBottom="24dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginRight="42dp"
+                android:hint="@string/prompt_email"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
-                    <AutoCompleteTextView
-                        android:id="@+id/firstName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder_teal"
-                        android:focusableInTouchMode="true"
-                        android:hint="@string/prompt_first_name"
-                        android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:padding="16dp" />
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/re_enter_password"
+                android:layout_marginBottom="24dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginRight="42dp"
+                android:drawableRight="@mipmap/show_password"
+                android:hint="@string/prompt_password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
-                </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/re_enter_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/enroll_button"
+                android:layout_marginLeft="42dp"
+                android:layout_marginRight="42dp"
+                android:hint="@string/prompt_re_enter_password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
-
-                    <AutoCompleteTextView
-                        android:id="@+id/lastName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder_teal"
-                        android:focusableInTouchMode="true"
-                        android:hint="@string/prompt_last_name"
-                        android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:padding="16dp" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
-
-                    <AutoCompleteTextView
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder_teal"
-                        android:focusableInTouchMode="true"
-                        android:hint="@string/prompt_email"
-                        android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:padding="16dp" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
-
-                    <EditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder_teal"
-                        android:focusableInTouchMode="true"
-                        android:hint="@string/prompt_password"
-                        android:imeOptions="actionNext"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:padding="16dp" />
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
-
-                    <EditText
-                        android:id="@+id/re_enter_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder_teal"
-                        android:focusableInTouchMode="true"
-                        android:hint="@string/prompt_re_enter_password"
-                        android:imeOptions="actionDone"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:padding="16dp" />
-                </android.support.design.widget.TextInputLayout>
-
-                <TextView
-                    android:id="@+id/password_criteria"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:padding="8dp"
-                    android:text="Password Criteria ?"
-                    android:textAlignment="textEnd" />
-
-                <Button
-                    android:id="@+id/enroll_button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:text="@string/action_create_account"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/login_suggestion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center_horizontal"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:padding="16dp"
-                    android:text="@string/login_suggestion" />
-
-            </LinearLayout>
-        </ScrollView>
+            <Button
+                android:id="@+id/enroll_button"
+                style="@style/grayButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="40dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginRight="42dp"
+                android:onClick="@{handlers::onClickEvent}"
+                android:text="@string/action_create_account" />
+        </RelativeLayout>
 
         <!-- Enroll progress -->
         <ProgressBar
