--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <!--Default Colors-->
     <color name="toolbar_background">@color/primary</color>
     <color name="toolbar_text">@color/google_white</color>
+    <color name="toolbar_white_text">@color/grey</color>
 
     <color name="drawer_background">@color/google_white</color>
     <color name="drawer_text_color">@color/grey</color>
