--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+    <style name="AppThemeWhite" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+    </style>
+
 
     <style name="tealButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/button_boarder_teal</item>
