--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,61 +12,43 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
 
-        <ScrollView
-            android:id="@+id/login_form"
+
+        <include
+            android:id="@+id/toolbarWhite"
+            layout="@layout/toolbar_white" />
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="1dp"
+            android:layout_below="@+id/toolbarWhite"
+            android:background="@color/black" />
 
-            <LinearLayout
-                android:id="@+id/email_login_form"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:focusableInTouchMode="true"
-                android:orientation="vertical">
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:hint="@string/prompt_email"
+            android:inputType="textEmailAddress"
+            android:layout_margin="42dp"
+            android:maxLines="1"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" />
 
-                <TextView
-                    style="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/forgot_password"
-                    android:textAlignment="center" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/email_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_boarder_teal"
-                        android:hint="@string/prompt_email"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:padding="16dp" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <Button
-                    android:id="@+id/forgot_password_button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:onClick="@{handlers::onClickEvent}"
-                    android:text="@string/action_reset"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </ScrollView>
+        <Button
+            android:id="@+id/forgot_password_button"
+            style="@style/grayButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="42dp"
+            android:layout_marginRight="42dp"
+            android:onClick="@{handlers::onClickEvent}"
+            android:text="@string/action_reset"
+            android:textStyle="bold" />
 
         <!-- Login progress -->
         <ProgressBar
