--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -40,7 +40,7 @@
                 android:layout_marginBottom="24dp"
                 android:layout_marginLeft="42dp"
                 android:layout_marginRight="42dp"
-                android:hint="@string/prompt_last_name"
+                android:hint="@string/prompt_first_name"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
@@ -87,7 +87,7 @@
                 android:layout_marginRight="42dp"
                 android:drawableRight="@mipmap/show_password"
                 android:hint="@string/prompt_password"
-                android:imeOptions="actionDone"
+                android:imeOptions="actionNext"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
