--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
         <item name="android:textColor">@color/grey</item>
         <item name="android:layout_height">44dp</item>
     </style>
+
+    <style name="enableButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_enabled</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_height">44dp</item>
+    </style>
 </resources>
