--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -75,20 +75,24 @@
             android:layout_height="wrap_content"
             android:entries="@array/profile_gender" />
 
-        <TextView
-            android:id="@+id/dob_label"
-            android:layout_width="wrap_content"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/dob_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/profile_label_marginTop"
-            android:text="Date of Birth" />
+            android:layout_marginBottom="16dp"
+            android:focusable="false">
 
-        <EditText
-            android:id="@+id/dob"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1/12/1987"
-            android:textSize="@dimen/profile_text_size"
-            android:textStyle="bold" />
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/dob"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:focusable="false"
+                android:hint="Date of Birth"
+                android:inputType="text"
+                android:maxLines="2" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/address_layout"
