--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -32,47 +32,47 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/divider"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="32dp"
-            android:text="@string/forgot_password_header"
-            android:textAlignment="center"
+            android:layout_marginTop="16dp"
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingStart="16dp"
+            android:text="Please enter your email address."
             android:textColor="@color/text_dark"
-            android:textSize="20sp"
+            android:textSize="32dp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/subHeader"
+            android:id="@+id/subheader"
             style="@style/tradeGothicLTStd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/header"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:text="@string/forgot_password_sub_header"
-            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingStart="16dp"
+            android:text="An email will be sent to entered address with reset instructions"
             android:textColor="@color/text_dark"
-            android:textSize="18sp" />
+            android:textSize="20sp" />
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/email"
             style="@style/tradeGothicLTStd_14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/subHeader"
-            android:layout_marginLeft="42dp"
-            android:layout_marginRight="42dp"
+            android:layout_below="@id/subheader"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_marginTop="42dp"
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp" />
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingStart="16dp" />
 
         <Button
             android:id="@+id/forgot_password_button"
@@ -83,7 +83,7 @@
             android:layout_marginBottom="40dp"
             android:layout_marginLeft="42dp"
             android:layout_marginRight="42dp"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="52dp"
             android:onClick="@{handlers::onClickEvent}"
             android:text="@string/action_reset_password" />
 
