--- a/MyHome/app/src/main/res/layout/options_activity.xml
+++ b/MyHome/app/src/main/res/layout/options_activity.xml
@@ -5,7 +5,7 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"
+        layout="@layout/toolbar_white"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize" />
 
