--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -9,11 +9,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/profile_firstname_indent"
-            android:layout_marginLeft="@dimen/profile_firstname_indent"
-            android:layout_marginRight="@dimen/profile_firstname_indent"
-            android:layout_marginStart="@dimen/profile_firstname_indent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/profile_firstname_indent">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/first_name_layout"
@@ -70,13 +67,15 @@
                 android:id="@+id/gender_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/profile_label_marginTop"
-                android:text="Gender" />
+                android:fontFamily="sans-serif-light"
+                android:text="Gender"
+                android:textSize="13sp" />
 
             <Spinner
                 android:id="@+id/gender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
                 android:entries="@array/profile_gender" />
 
             <android.support.design.widget.TextInputLayout
@@ -159,6 +158,7 @@
                     android:id="@+id/state"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:layout_weight=".4"
                     android:entries="@array/profile_states" />
             </LinearLayout>
