--- a/MyHome/app/src/main/res/layout/appointments.xml
+++ b/MyHome/app/src/main/res/layout/appointments.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Appointment" />
+    <Button
+        android:id="@+id/book_appointment"
+        style="@style/enableButtonStyle"
+        android:layout_width="255dp"
+        android:layout_height="45dp"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/profile_label_marginTop"
+        android:text="@string/book_appointment" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_appointments"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
