--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -79,25 +79,31 @@
                         android:visibility="gone"
                         tools:ignore="HardcodedText" />
                 </RelativeLayout>
-
+               <RelativeLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="38dp"
+                   android:layout_marginEnd="11dp"
+                   android:layout_marginStart="12dp"
+                   android:layout_marginTop="14dp"
+                   >
                 <TextView
                     android:id="@+id/txt_db_appoint_content"
                     style="@style/tradeGothicLTStdLight_16"
                     android:layout_width="match_parent"
-                    android:layout_height="38dp"
-                    android:layout_marginEnd="11dp"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="14dp"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:lineSpacingExtra="22sp"
+                    android:lineSpacingExtra="2sp"
                     android:text="No appointments scheduled"
                     android:textColor="@color/db_gunmetal"
                     android:textSize="16sp"
                     tools:ignore="HardcodedText" />
-
+               </RelativeLayout>
                 <View
                     style="@style/dbDivider"
                     android:layout_marginEnd="2dp"
+                    android:layout_marginTop="9dp"
                     android:background="@color/db_white" />
 
                 <RelativeLayout
