--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -81,10 +81,10 @@
     <style name="db_scheduleButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/db_schedule_button_enable</item>
         <item name="android:textColor">@color/db_white_two</item>
-        <item name="android:textAppearance">@style/tradeGothicLTStdBold_18</item>
+        <item name="android:textAppearance">@style/tradeGothicLTStdBd2_18</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:layout_height">44dp</item>
+        <item name="android:layout_height">45dp</item>
     </style>
 
     <style name="db_searchButtonStyle" parent="Widget.AppCompat.Button.Borderless">
@@ -132,6 +132,9 @@
         <item name="android:textColor">@color/db_gunmetal</item>
     </style>
 
+    <style name="tradeGothicLTStdBd2_18" parent="tradeGothicLTStdBd2">
+        <item name="android:textSize">18sp</item>
+    </style>
     <style name="tradeGothicLTStdBd2_36" parent="tradeGothicLTStdBd2">
         <item name="android:textSize">36sp</item>
     </style>
